# forcetable

./: README.md  requirements.txt  setup.cfg
forcetable/: __init__.py  _field.py  _record.py  _table.py  exceptions.py
tests/integrated/: setup_tests.py  test_file_field.py  test_table_functions.py
tests/unit/: test_field.py  test_record.py  test_table.py
