[metadata]
name = forcetable
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Creates records and fields also calculates fields cartesian product.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/forcetable
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/forcetable/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
keywords = 
   fields
   records
   table
   items

[options]
packages = find:
install_requires =
    prodius

python_requires = >=3.6

[options.packages.find]
exclude =
    tests