[metadata]
name = forcetable
version = 0.0.3
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Creates records from cartesian product of fields to form table.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/forcetable
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/forcetable/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = 
   fields
   records
   table
   items
   cartesian-product

[options]
packages = find:
install_requires =
    prodius

python_requires = >=3.6

[options.packages.find]
exclude =
    tests